# F.R.I.D.A.Y

./: .env.example  .env.save  .gitignore  Makefile
core/: config.py  main.py  pyproject.toml  test_event_loop.py  verify_approval.py
core/agents/: memory_agent.py  planner.py  research.py  router.py  terminal.py
core/api/: health.py
core/capabilities/: contracts.py  executor.py  registry.py
core/evals/: __init__.py  cases.json  index_cases.json  security_cases.json
core/llm/: __init__.py  model_router.py  redaction.py  settings.py  types.py
core/llm/providers/: __init__.py  base.py  deepseek_provider.py  ollama_provider.py  openai_provider.py
core/memory/: logger.py  manager.py  migrations.py  pipeline.py  redaction.py  retriever.py  sqlite_store.py  summarizer.py
core/research/: __init__.py  context_builder.py  context_optimizer.py  ranker.py  workspace_boost.py
core/schemas/: events.py
core/security/: approval.py  permissions.py
core/supervision/: heartbeat.py
core/tools/: __init__.py  eval_harness.py  memory_debug.py  workspace_index.py
core/workspace/: __init__.py  extractors.py  indexer.py  models.py  store.py
docs/: dev-startup.md  llm-providers.md
infra/: docker-compose.yml  nats.conf
scripts/: dev.sh  health.sh  lib.sh  start-core.sh  start-desktop.sh  start-nats.sh  start-ollama.sh  stop-dev.sh
tests/: test_capabilities.py  test_capability_approval.py  test_context_optimizer.py  test_eval_harness.py  test_llm_providers.py  test_memory_backend.py  test_research_ranking.py  test_runtime_failures.py  test_security_adversarial.py  (+1 more)
(+11 files in other folders)
